--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "PORT=3005 mocha --require @babel/register --recursive --exit --ui tdd tests/"
+    "test": "PORT=3005 mocha --require @babel/register --recursive --exit --ui tdd tests/",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "@babel/core": "^7.7.5",
@@ -20,6 +21,7 @@
     "helmet": "^3.21.3",
     "jsdom": "^16.2.0",
     "mocha": "^7.1.0",
+    "nodemon": "^3.1.9",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
